# cookiecutter-py-simple-project

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  AUTHORS.md  README.md  cookiecutter.json  pyproject.toml
